# test_target_calc

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  req_python_calculator.md
.github/workflows/: ci.yml  release.yml
scripts/: check.py  package_exe.py  package_web.py  pycalc_cli_entry.py  smoke_test_exe.py
src/pycalc/: __init__.py  cli.py  engine.py
src/pycalc/templates/: index.html
src/pycalc/web/: __init__.py  __main__.py  app.py
tests/: test_cli.py  test_consistency.py  test_engine.py  test_scaffold.py  test_web.py
