[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycalc"
version = "0.1.4"
description = "Minimal calculator with shared engine, CLI, and web UI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Flask>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pyinstaller>=6.0",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
calc = "pycalc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
